--- a/gears-menu.ui
+++ b/gears-menu.ui
@@ -9,6 +9,12 @@
     </section>
     <section>
       <item>
+        <attribute name="label" translatable="yes">_New</attribute>
+        <attribute name="action">app.new</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">_Open</attribute>
         <attribute name="action">app.open</attribute>
       </item>
