--- a/window.ui
+++ b/window.ui
@@ -30,7 +30,7 @@
           </object>
         </child>
         <child>
-	<object class="GtkNotebook">
+	<object class="GtkNotebook" id="notebook">
 	</object>
         </child>
       </object>
