--- a/window.ui
+++ b/window.ui
@@ -5,14 +5,21 @@
     <child type="titlebar">
       <object class="GtkHeaderBar" id="header">
         <child type="end">
-          <object class="GtkMenuButton" id="gears">
-            <property name="direction">none</property>
-          </object>
-        </child>
-        <child type="end">
           <object class="GtkToggleButton" id="search">
             <property name="sensitive">0</property>
             <property name="icon-name">edit-find-symbolic</property>
+          </object>
+        </child>
+	<child type="end">
+          <object class="GtkButton" id="about">
+            <property name="sensitive">0</property>
+            <property name="icon-name">logo-icon-name</property>
+            <signal name="clicked" handler="about_dialog"/>
+          </object>
+        </child>
+        <child type="start">
+          <object class="GtkMenuButton" id="gears">
+            <property name="direction">none</property>
           </object>
         </child>
       </object>
@@ -22,13 +29,27 @@
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkSearchBar" id="searchbar">
+	  <child>
+            <object class="GtkBox" id="search_box">
             <child>
               <object class="GtkSearchEntry" id="searchentry">
                 <signal name="search-changed" handler="search_text_changed"/>
               </object>
             </child>
-          </object>
+	    <child>
+	      <object class="GtkButton" id="godown">
+	        <property name="icon-name">go-down</property>
+	      </object>
+	   </child>
+	    <child>
+	      <object class="GtkButton" id="goup">
+	        <property name="icon-name">go-up</property>
+	      </object>
+	    </child>
+         </object>
         </child>
+	</object>
+	</child>
         <child>
 	<object class="GtkNotebook" id="notebook">
 	</object>
