--- a/window.ui
+++ b/window.ui
@@ -12,8 +12,7 @@
         </child>
 	<child type="end">
           <object class="GtkButton" id="about">
-            <property name="sensitive">0</property>
-            <property name="icon-name">logo-icon-name</property>
+            <property name="icon-name">logo-icon-about</property>
             <signal name="clicked" handler="about_dialog"/>
           </object>
         </child>
