--- a/gears-menu.ui
+++ b/gears-menu.ui
@@ -21,6 +21,12 @@
     </section>
     <section>
       <item>
+        <attribute name="label" translatable="yes">_Open From Template</attribute>
+        <attribute name="action">app.open_tmpl</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">_Save_As</attribute>
         <attribute name="action">app.save_as</attribute>
       </item>
