--- a/window.ui
+++ b/window.ui
@@ -5,7 +5,7 @@
     <child type="titlebar">
       <object class="GtkHeaderBar" id="header">
         <child type="end">
-          <object class="GtkToggleButton" id="search">
+          <object class="GtkToggleButton" id="btn_find_icon">
             <property name="sensitive">0</property>
             <property name="icon-name">edit-find-symbolic</property>
           </object>
@@ -35,9 +35,17 @@
                 <signal name="search-changed" handler="search_text_changed"/>
               </object>
             </child>
+   	 <child>
+      	  <object class="GtkBox" id="replace_box">
+            <child>
+              <object class="GtkText" id="replace_search_entry">
+              </object>
+            </child>
+              </object>
+            </child>
         <child type="end">
           <object class="GtkCheckButton" id="btn_check_case">
-            <property name="sensitive">0</property>
+	  <property name="label">Match case</property>
           </object>
 	</child>
 	    <child>
