--- a/window.ui
+++ b/window.ui
@@ -1,72 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="LitosAppWindow" parent="GtkApplicationWindow">
-    <property name="title">Litos</property>
-    <child type="titlebar">
-      <object class="GtkHeaderBar" id="header">
-        <child type="end">
-          <object class="GtkToggleButton" id="btn_find_icon">
-            <property name="sensitive">0</property>
-            <property name="icon-name">edit-find-symbolic</property>
-          </object>
-        </child>
-	<child type="end">
-          <object class="GtkButton" id="about">
-            <property name="icon-name">logo-icon-about</property>
-            <signal name="clicked" handler="about_dialog"/>
-          </object>
-        </child>
-        <child type="start">
-          <object class="GtkMenuButton" id="gears">
-            <property name="direction">none</property>
-          </object>
-        </child>
-      </object>
-    </child>
-    <child>
-      <object class="GtkBox" id="content_box">
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkSearchBar" id="searchbar">
-	  <child>
-            <object class="GtkBox" id="search_box">
-            <child>
-              <object class="GtkSearchEntry" id="search_entry">
-                <signal name="search-changed" handler="search_text_changed"/>
-              </object>
-            </child>
-        <child type="end">
-          <object class="GtkCheckButton" id="btn_check_case">
-	  <property name="label">Match case</property>
-          </object>
-	</child>
-	    <child>
-	      <object class="GtkButton" id="prev_button">
-	        <property name="icon-name">go-up</property>
-	      </object>
-	    </child>
-	    <child>
-	      <object class="GtkButton" id="next_button">
-	        <property name="icon-name">go-down</property>
-	      </object>
-	   </child>
-	</object>
-	</child>
-	  <child>
-            <object class="GtkBox" id="replace_box">
-            <child>
-              <object class="GtkText" id="replace_search_entry">
-              </object>
-            </child>
-	</object>
-        </child>
-         </object>
-        </child>
-        <child>
-	<object class="GtkNotebook" id="notebook">
-	</object>
-        </child>
-      </object>
-    </child>
-  </template>
+	<template class="LitosAppWindow" parent="GtkApplicationWindow">
+		<property name="title">Litos</property>
+		<child type="titlebar">
+			<object class="GtkHeaderBar" id="header">
+				<child type="end">
+					<object class="GtkToggleButton" id="btn_find_icon">
+						<property name="sensitive">0</property>
+						<property name="icon-name">edit-find-symbolic</property>
+					</object>
+				</child>
+				<child type="end">
+					<object class="GtkButton" id="about">
+						<property name="icon-name">logo-icon-about</property>
+						<signal name="clicked" handler="about_dialog"/>
+					</object>
+				</child>
+				<child type="start">
+					<object class="GtkMenuButton" id="gears">
+						<property name="direction">none</property>
+					</object>
+				</child>
+			</object>
+		</child>
+		<child>
+			<object class="GtkBox" id="content_box">
+				<property name="orientation">vertical</property>
+				<child>
+					<object class="GtkSearchBar" id="searchbar">
+						<child>
+							<object class="GtkBox" id="search_box">
+							<property name="orientation">horizontal</property>
+								<child>
+									<object class="GtkSearchEntry" id="search_entry">
+										<signal name="search-changed" handler="search_text_changed"/>
+									</object>
+								</child>
+								<child type="end">
+									<object class="GtkCheckButton" id="btn_check_case">
+										<property name="label">Match case</property>
+									</object>
+								</child>
+								<child>
+									<object class="GtkButton" id="prev_button">
+										<property name="icon-name">go-up</property>
+									</object>
+								</child>
+								<child>
+									<object class="GtkButton" id="next_button">
+										<property name="icon-name">go-down</property>
+									</object>
+								</child>
+							</object>
+						</child>
+						<child>
+							<object class="GtkBox" id="replace_box">
+							<property name="orientation">vertical</property>
+								<child>
+									<object class="GtkText" id="replace_search_entry"></object>
+								</child>
+							</object>
+						</child>
+					</object>
+				</child>
+				<child>
+					<object class="GtkNotebook" id="notebook"></object>
+				</child>
+			</object>
+		</child>
+	</template>
 </interface>
